<resources>
    <string name="app_name">Music Player</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_name">Song Name</string>
    <string name="artist_album">Artist Album</string>
    <string name="play_all">Play All</string>
    <string name="_1000">(1000)</string>
    <string name="play_music">Play Music</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="play_speed">1.0</string>
    <string name="music_speed">Music Speed</string>
    <string name="music_equalizer">Music Equalizer</string>
    <string name="music_time_stop">Music Time Stop</string>
    <string name="music_add_favourite">Music Add Favourite</string>
    <string name="minimize_player">Minimize Player</string>
    <string name="more">More</string>
    <string name="music_picture">Music picture</string>
    <string name="music_shuffle">Music Shuffle</string>
    <string name="play_previous_music">Play Previous Music</string>
    <string name="music_play_pause">Music Play or Pause</string>
    <string name="play_next_music">Play next Music</string>
    <string name="music_queue">Music Queue</string>
    <string name="_00_00">00:00</string>
    <string name="music_title">Music Title</string>
    <string name="music_pause">Music Pause</string>
    <string name="duration_folder_name">00:00 - Folder name</string>
    <string name="_1">1</string>
    <string name="music_loading">Music Loading</string>
    <string name="_1_01_0">(1:01:0)</string>
    <string name="music_repeat">Music Repeat</string>
    <string name="display_name">Display Name</string>
    <string name="size">size</string>
    <string name="music_info">Music Info</string>
    <string name="equalizer">Equalizer</string>
    <string name="favourite">Favourite</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="music_sleep_timer">Music Sleep Timer</string>
    <string name="music_volume">Music Volume</string>
    <string name="volume">Volume</string>
    <string name="music_share">Music Share</string>
    <string name="share">Share</string>
    <string name="music_delete">Music Delete</string>
    <string name="delete">Delete</string>
    <string name="cancel">CANCEL</string>
    <string name="add_to_new_playlist">Add to new Playlist</string>
    <string name="use_as_a_ringtone">Use As a Ringtone</string>
    <string name="lyric">Lyric</string>
    <string name="rename">Rename</string>
    <string name="time_text">Time text</string>
    <string name="off">OFF</string>
    <string name="play_until_the_end_of_the_song">Play until the end of the song</string>
    <string name="_10_mins_later">10 Mins later</string>
    <string name="_15_mins_later">15 Mins Later</string>
    <string name="_30_mins_later">30 Mins Later</string>
    <string name="custom">Custom</string>
    <string name="custom_sleep_timer">Custom Sleep Timer</string>
    <string name="minutes">Minutes</string>
    <string name="confirm">CONFIRM</string>
    <string name="tab_layout">Tab Layout\n</string>
    <string name="music_image">music image</string>
    <string name="name_folder">Name Folder</string>
    <string name="music_position">music position</string>
    <string name="_1_100">1/100</string>
    <string name="music_sort">music sort</string>
    <string name="song_info_back">Song Info Back</string>
    <string name="song_info">Song Info</string>
    <string name="song_title_name">Song Title Name</string>
    <string name="song_display_name">Song Display Name</string>
    <string name="artist">Artist</string>
    <string name="artist_name">Artist Name</string>
    <string name="album">Album</string>
    <string name="album_name">Album Name</string>
    <string name="duration">Duration</string>
    <string name="_00_00_mb">00.00 MB</string>
    <string name="bitrate">Bitrate</string>
    <string name="_320_kbps">320 kbps</string>
    <string name="date_added">Date added</string>
    <string name="_01_03_2025_11_11_am">01/03/2025 11:11 AM</string>
    <string name="date_modified">Date modified</string>
    <string name="file_path">File Path</string>
    <string name="path_address">Path Address</string>
    <string name="folder_name">Folder Name</string>
    <string name="horizontal_rule">Horizontal Rule</string>
    <string name="playback_speed_1_0x">Playback Speed: 1.0x</string>
    <string name="_0_25x">0.25x</string>
    <string name="_0_5x">0.5x</string>
    <string name="_0_75x">0.75x</string>
    <string name="_1_0x">1.0x</string>
    <string name="_1_25x">1.25x</string>
    <string name="_1_5x">1.5x</string>
    <string name="_1_75x">1.75x</string>
    <string name="_2_0x">2.0x</string>
    <string name="_2_25x">2.25x</string>
    <string name="_2_5x">2.5x</string>
    <string name="_2_75x">2.75x</string>
    <string name="_3_0x">3.0x</string>
    <string name="_3_25x">3.25x</string>
    <string name="_3_5x">3.5x</string>
    <string name="_3_75x">3.75x</string>
    <string name="_4_0x">4.0x</string>
    <string name="music_search">Music Search</string>
    <string name="music_select_multiple">Music Select Multiple</string>
    <string name="search_view">Search View</string>
    <string name="search_music">Search music</string>
    <string name="select_songs_back">Select Songs Back</string>
    <string name="select_songs">Select Songs</string>
    <string name="music_sorts">Music Sorts</string>
    <string name="music_select_all">Music Select All</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="play_next">Play next</string>
    <string name="select_music_check_or_unchecked">Select Music Check or Unchecked</string>

    <string name="selected_songs">%d selected</string>
    <string name="two_string_text">%1s - %2s</string>
    <string name="song_position">%1d/%2d</string>
    <string name="stop_time_text">Music will stop after %d minutes</string>
    <string name="playback_speed_text">Playback Speed: %s</string>
    <string name="playback_speed_number">Playback Speed: %fx</string>
    <string name="playback_speed_text_player">%sx</string>
    <string name="total_songs_text">(%d)</string>
    <string name="total_time_text">(%s)</string>

</resources>